# CSD2

./: .gitignore  CMakeLists.txt  README.md
CSD2a/irregular_beat_generator/Output/: Markov_beat.midi
CSD2a/irregular_beat_generator/samples/: VL-1_Bassdrum.wav.asd  VL-1_HiHat.wav.asd  VL-1_Snaredrum.wav.asd
CSD2a/irregular_beat_generator/scripts/: markov_beat_generator.py
CSD2a/markov_beat_generator/: markov_beat_generator.py
CSD2a/markov_beat_generator/Output/: Markov_beat.midi
CSD2a/markov_beat_generator/scripts/: markov_beat_generator.py
CSD2a/multi_sample_sequencer/: multi_sample_sequencer.py
CSD2b/: CMakeLists.txt
CSD2b/Sessions/Session2/: CMakeLists.txt
CSD2b/Sessions/Session3/: CMakeLists.txt
CSD2b/assignments/: CMakeLists.txt
CSD2b/assignments/oscillator_Sem_rebuild/: CMakeLists.txt  SoundSource.h  keyboard.cpp  keyboard.h  main.cpp  oscillator.cpp  oscillator.h  synthesizer.cpp  synthesizer.h
CSD2b/assignments/sounding_oscillators/: CMakeLists.txt  customCallback.h  main.cpp  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h  synth.cpp  synth.h
CSD2b/assignments/speaker/: CMakeLists.txt  driver.h  main.cpp  speaker.cpp  speaker.h  tweeter.cpp  tweeter.h  woofer.cpp  woofer.h
CSD2b/eindopdracht_SynthSong/doc/: .$SynthSong_v1.drawio.bkp  SynthSong_v1.drawio
CSD2b/eindopdracht_SynthSong/doc/sources/: other_sources.md
CSD2b/eindopdracht_SynthSong/src/: CMakeLists.txt  audioToFile.h  audiocomponent.h  bitcrusher.cpp  bitcrusher.h  customCallback.cpp  customCallback.h  main.cpp  oscillator.cpp  oscillator.h  output.csv  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h  squareBassSynth.cpp  squareBassSynth.h  superSawSynth.cpp  superSawSynth.h  synth.cpp  synth.h  tune.cpp  tune.h  tunePlayer.cpp  tunePlayer.h  tunes.cpp  tunes.h  uiUtility.cpp  uiUtility.h
CSD2b/temp/: CMakeLists.txt
CSD2b/temp/01_melody/: CMakeLists.txt  melody.cpp
CSD2b/temp/02_ui_generic/: CMakeLists.txt
CSD2b/temp/03_enum_choices/: CMakeLists.txt
CSD2b/temp/03_soundingSine/: sine.cpp
CSD2b/temp/04_sineSquareSaw_Final/: CMakeLists.txt  output.csv
CSD2b/test/class/: CMakeLists.txt  main.cpp
CSD2b/test/hello/: CMakeLists.txt  a.out  main.cpp
CSD2b/test/instrument_class/: CMakeLists.txt  instrument.cpp  instrument.h  main.cpp
CSD2b/test/speaker_class/: CMakeLists.txt  main.cpp
CSD2c/: CMakeLists.txt
CSD2c/assignments/: CMakeLists.txt
CSD2c/assignments/CircBuffer/: CMakeLists.txt  CircBuffer.cpp  CircBuffer.h  main.cpp
CSD2c/assignments/circBuffer/: CMakeLists.txt  circBuffer.cpp  circBuffer.h  main.cpp
CSD2c/assignments/effects/: CMakeLists.txt  Filters.h  StereoChorus.cpp  StereoChorus.h  StereoEffect.cpp  StereoEffect.h  bitcrusher.cpp  bitcrusher.h  callback.cpp  callback.h  chorus.cpp  chorus.h  delay.cpp  delay.h  deltasequence.h  effect.cpp  effect.h  main.cpp  tremolo.cpp  tremolo.h  waveshaper.cpp  waveshaper.h  wavetableGenerator.cpp  wavetableGenerator.h
CSD2c/assignments/interpolation/: CMakeLists.txt  interpolation.cpp  interpolation.h  main.cpp
CSD2c/assignments/stereo/: main.cpp
CSD2c/assignments/tremolo/: CMakeLists.txt
CSD2c/eindopdracht_2c/: BitCrusher.cpp  CMakeLists.txt  CustomOscServer.h  Filters.h  README.md  StereoChorus.cpp  StereoChorus.h  StereoEffect.cpp  StereoEffect.h  Vernier-GoDirect-RespirationBelt_bluetooth.py  callback.cpp  callback.h  chorus.cpp  chorus.h  delay.cpp  delay.h  effect.cpp  effect.h  main.cpp  osc.cpp  waveshaper.cpp  waveshaper.h
CSD2c/eindopdracht_2c/doc/sources/: sources.txt
CSD2c/eindopdracht_2c/src/: BitCrusher.h  CMakeLists.txt  CustomOscServer.cpp  Filters.h  Vernier-GoDirect-RespirationBelt_bluetooth.py  callback.cpp  callback.h  delay.cpp  delay.h  effect.h  waveshaper.cpp  wavetableGenerator.cpp  wavetableGenerator.h
CSD2c/eindopdracht_2c/src/gdx/: gdx.py
CSD2d/: CMakeLists.txt
CSD2d/Delays/: CMakeLists.txt  Effect.cpp  SubsampleDelay.cpp  SubsampleDelay.h
CSD2d/DopplerTest/src/: CMakeLists.txt  CustomCallback.cpp  CustomCallback.h  CustomOscServer.cpp  Doppler.cpp  Effect.cpp
CSD2d/Dopplinator/src/: CMakeLists.txt  CustomCallback.cpp  CustomCallback.h  Delay.cpp  Delay.h  Doppler.cpp  Doppler.h  Effect.h  main.cpp  osc.h
CSD2d/FakeDoppler/src/: CMakeLists.txt  CustomCallback.cpp  CustomCallback.h
CSD2d/eindopdracht_2d/: CMakeLists.txt
CSD2d/eindopdracht_2d/nyoomPlugin/: README.md
CSD2d/eindopdracht_2d/nyoomPlugin/doc/sources/: sources.txt
CSD2d/eindopdracht_2d/nyoomPlugin/src/: CMakeLists.txt  Delay.cpp  Delay.h  Doppler.cpp  Doppler.h  Effect.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
DSP_exercises/: CMakeLists.txt
DSP_exercises/systems1/: CMakeLists.txt  main.cpp
Plugins/: CMakeLists.txt
Plugins/MyPlugin/: CMakeLists.txt  PluginProcessor.cpp  PluginProcessor.h  chorus.h
Tests/: ChatGPT_matrix_generation.py  ValueSmoothener.cpp  ValueSmoothener.h
multi_sample_sequencer/: multi_sample_sequencer.py
python_basics/: LesTheorie.py  RitmischePlayback.py  midi_test.py  playsound.py  username.py
shared/audio/: CMakeLists.txt  CircBuffer.cpp  audioToFile.h  interpolation.cpp  interpolation.h
shared/oscillators/: CMakeLists.txt  oscillator.cpp  oscillator.h  saw.cpp  saw.h  sine.cpp  sine.h  square.cpp  square.h  triangle.cpp  triangle.h
single_sample_sequencer/: single_sample_sequencer.py
